--- a/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
@@ -101,21 +101,21 @@
 
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table class="table table-hover text-center display" id="customerTable">
-                            <thead class="table-dark">
-                                <tr>
-                                    <th scope="col" class="tableHeaderbg">User Name</th>
-                                    <th scope="col" class="tableHeaderbg">No. of Users</th>
-                                    <th scope="col" class="tableHeaderbg">Subscription</th>
-                                    <th scope="col" class="tableHeaderbg">Subscription Type</th>
-                                    <th scope="col" class="tableHeaderbg">Expiring</th>
-                                    <th scope="col" class="tableHeaderbg">Expiration Date</th>
-                                    <th scope="col" class="tableHeaderbg">Phone Number</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
+                                    <table class="table" id="customerTable">
+                         <thead>
+                             <tr>
+                                 <th style="width:290px!Important">User Name</th>
+                                 <th style="width:290px!Important">No. of Users</th>
+                                 <th style="width:290px!Important">Subscription</th>
+                                 <th style="width:290px!Important">Subscription Type</th>
+                                 <th style="width:290px!Important">Expiring</th>
+                                 <th style="width:290px!Important">Expiration Date</th>
+                                 <th style="width:290px!Important">Phone Number</th>
+                             </tr>
+                         </thead>
+                         <tbody>
+                         </tbody>
+                     </table>   
                     </div>
 
                 </div>
