--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -35,6 +35,8 @@
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/prism.css">
     <!-- Plugins css Ends-->
     <!-- Plugins css start-->
+    <link href="~/dashboard/assets/css/vendors/select2.css" rel="stylesheet" />
+
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/scrollbar.css">
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/datatables.css">
     <!-- Bootstrap css-->
@@ -331,7 +333,8 @@
     <script src="~/Dashboard/assets/js/typeahead-search/typeahead-custom.js"></script>
     <script src="~/Dashboard/assets/js/height-equal.js"></script>
     <!-- Plugins JS Ends-->
-    
+    <script src="~/dashboard/assets/js/select2/select2.full.min.js"></script>
+
     <script src="~/Dashboard/assets/js/chart/google/google-chart-loader.js"></script>
     <script src="~/Dashboard/assets/js/chart/google/google-chart.js"></script>
     <script src="~/Dashboard/assets/js/chart/chartjs/chart.min.js"></script>
@@ -361,6 +364,13 @@
 @*     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.10.8/sweetalert2.min.js"></script>
  *@    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
 
-    
+    <script>
+        $(document).ready(function () {
+            $('.select2').select2({
+                allowClear: true,
+                placeholder: "Please select an option"
+            });
+        });
+    </script>
 </body>
 </html>
